# MachineLearning_F1Proyect

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements.txt
.Trash-0/info/: untitled.md.trashinfo
airflow/dags/: f1_kedro_dag.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters.yml
docker/airflow/: Dockerfile
docker/python/: Dockerfile
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_classification_results.ipynb  05_regression_results.ipynb  06_unsupervised_clustering.ipynb
src/proyecto_f1kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/proyecto_f1kedro/pipelines/classification/: nodes.py  pipeline.py
src/proyecto_f1kedro/pipelines/clustering/: nodes.py  pipeline.py
src/proyecto_f1kedro/pipelines/data_engineering/: nodes.py  pipeline.py
src/proyecto_f1kedro/pipelines/data_preparation/: nodes.py  pipeline.py
src/proyecto_f1kedro/pipelines/data_science/: nodes.py  pipeline.py
src/proyecto_f1kedro/pipelines/data_understanding/: nodes.py  pipeline.py
src/proyecto_f1kedro/pipelines/model_input/: nodes.py  pipeline.py
src/proyecto_f1kedro/pipelines/regression/: nodes.py  pipeline.py
